--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,9 @@
+
+.example-container {
+  width: 100%;
+  height: 100%;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+}
 .example-spacer {
   flex: 1 1 auto;
 }
@@ -35,35 +41,6 @@ mat-grid-tile {
   border-color: black;
 }
 
-.footer-text {
-  font-size: 14px;
-  color: rgba(0, 0, 0, 0.54);
-}
-
-.footer-spacer {
-  flex: 1 1 auto;
-}
-
-.footer-newsletter-form {
-  display: flex;
-  align-items: center;
-  margin-right: 24px;
-}
-
-.footer-newsletter-form mat-form-field {
-  max-width: 400px;
-}
-
-.footer-social-links {
-  display: flex;
-  align-items: center;
-}
-
-.footer-social-links a {
-  margin-left: 12px;
-}
-
-
 .space {
   margin-left: 270px;
 }
@@ -71,19 +48,9 @@ mat-grid-tile {
   margin-left: 50px;
 }
 
-.example-container {
-  width: 100%;
-  height: 100%;
-  border: 1px solid rgba(0, 0, 0, 0.5);
+body{
+  overflow: hidden !important;
 }
-
-.example-sidenav-content {
-  display: flex;
-  height: 100%;
-  align-items: center;
-  justify-content: center;
-}
-
-.example-sidenav {
-  width: 28%;
+.mat-drawer-inner-container {
+  overflow: hidden !important;
 }
