--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,14 +1,14 @@
 
   <footer  class="footer">
     <div class="footer-row">
-      <div class="footer-col">
+      <div class="footer-col footer-col-bigger">
         <h4>NEWSLETTER</h4>
         <h5>Sign up to our newsletter for inspiration, more behind the scenes & exclusive updates.</h5>
-        <h5>I have read and understood the Privacy Policy.</h5>
         <mat-form-field appearance="outline">
           <mat-label>Email</mat-label>
           <input matInput type="email" placeholder="Enter your email">
         </mat-form-field>
+        <h5>I have read and understood the Privacy Policy.</h5>
         <br><br><br><br>
         <h5 color="grey">©2023 WeDressGreen, All Rights Reserved.</h5>
       </div>
