--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,6 @@
-<mat-drawer #drawer class="example-sidenav" mode="over" position="end">
+
+
+<mat-drawer #drawer class="example-sidenav" mode="side" position="end">
   <mat-toolbar-row style="height:94px;">
     <span class="example-spacer"></span>
     <button mat-icon-button (click)="!drawer.toggle()">
@@ -69,7 +71,7 @@
 </mat-drawer>
 
 <header>
-  <mat-toolbar style="height:30px;">
+  <mat-toolbar style="height:25px;">
     <span class="span mat-small mat-caption">Free delivery on orders over 190€</span>
   </mat-toolbar>
 
