--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,15 +3,13 @@
 <app-header></app-header>
 
 
-<mat-grid-list cols="2" rowHeight="2:1">
-  <mat-grid-tile>1</mat-grid-tile>
-  <mat-grid-tile>2</mat-grid-tile>
-  <mat-grid-tile>3</mat-grid-tile>
-  <mat-grid-tile>4</mat-grid-tile>
-</mat-grid-list>
+<app-body></app-body>
 
 
 <mat-divider></mat-divider>
+
+  <app-body></app-body>
+
 
 <app-footer></app-footer>
 </mat-drawer-container>
