--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,4 +1,5 @@
 
+
 .example-spacer {
   flex: 1 1 auto;
 }
@@ -86,4 +87,22 @@
 }
 
 
+.mat-toolbar-row {
+  padding: 8px 16px;
+  box-sizing: border-box;
+}
 
+
+@media (max-width: 600px) {
+
+  html{
+    font-size:10px
+  }
+  .mat-toolbar-row {
+    padding: 4px;
+  }
+
+  .vertical-divider {
+    margin: 0 6px;
+  }
+}
