--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -17,7 +17,8 @@
         <h5>About us</h5>
         <h5>Our brands</h5>
         <h5>Our values</h5>
-        <a mat-button href="#">Privacy Policy</a>
+        <br><br><br><br>
+        <h5>Privacy Policy</h5>
       </div>
       <div class="footer-col">
         <h4>CUSTOMER SERVICE</h4>
@@ -25,14 +26,16 @@
         <h5>Contact us</h5>
         <h5>Deliveries</h5>
         <h5>Returns & Exchanges</h5>
-        <a mat-button href="#">Terms of Service</a>
+        <br><br><br><br>
+        <h5>Terms of Service</h5>
       </div>
       <div class="footer-col">
         <h4>SOCIALS</h4>
         <h5>Instagram</h5>
         <h5>Tiktok</h5>
         <h5>YouTube</h5>
-        <a mat-button href="#">Contact Us</a>
+        <br><br><br><br><br>
+        <h5>Contact Us</h5>
       </div>
     </div>
 
