--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <mat-drawer-container autosize class="container">
-
   <mat-drawer #drawer class="sidenav" position="end">
     <mat-toolbar-row style="height:94px;">
       <span class="example-spacer"></span>
@@ -10,73 +9,80 @@
     <mat-divider></mat-divider>
     <mat-tab-group #tabGroup class="center-content1">
       <mat-tab label="ACCOUNT">
-        <mat-divider></mat-divider>
-        <mat-card-header class="header-container">
-          <mat-card-title>LOG IN</mat-card-title>
-          <mat-card-subtitle>To access your account</mat-card-subtitle>
-        </mat-card-header>
-        <mat-card-content>
-          <mat-form-field class="example-full-width">
-            <mat-label>Email</mat-label>
-            <input [(ngModel)]="email" matInput placeholder="Email" type="email" value="">
-            <mat-icon matSuffix>email</mat-icon>
-          </mat-form-field>
-          <mat-form-field class="example-full-width">
-            <mat-label>Password</mat-label>
-            <input [(ngModel)]="password" matInput placeholder="Password" type="password">
-            <mat-icon matSuffix>vpn_key</mat-icon>
-          </mat-form-field>
-        </mat-card-content>
-        <mat-card-actions class="centered-button">
-          <button (click)="login()"  color="primary" mat-button>SIGN IN</button>
-        </mat-card-actions>
-
+        <ng-template matTabContent>
+          <mat-divider></mat-divider>
+          <mat-card-header class="header-container">
+            <mat-card-title>LOG IN</mat-card-title>
+            <mat-card-subtitle>To access your account</mat-card-subtitle>
+          </mat-card-header>
+          <mat-card-content>
+            <mat-form-field class="example-full-width">
+              <mat-label>Email</mat-label>
+              <input [(ngModel)]="email" matInput placeholder="Email" type="email" value="">
+              <mat-icon matSuffix>email</mat-icon>
+            </mat-form-field>
+            <mat-form-field class="example-full-width">
+              <mat-label>Password</mat-label>
+              <input [(ngModel)]="password" matInput placeholder="Password" type="password">
+              <mat-icon matSuffix>vpn_key</mat-icon>
+            </mat-form-field>
+          </mat-card-content>
+          <mat-card-actions class="centered-button">
+            <button (click)="login()" color="primary" mat-button>SIGN IN</button>
+          </mat-card-actions>
+        </ng-template>
       </mat-tab>
 
       <mat-tab label="SIGN UP">
-        <mat-divider></mat-divider>
-        <mat-card-header class="header-container">
-          <mat-card-title>SIGN UP</mat-card-title>
-          <mat-card-subtitle>To create your account</mat-card-subtitle>
-        </mat-card-header>
-        <mat-card-content>
-          <mat-form-field class="example-full-width">
-            <mat-label>Email</mat-label>
-            <input [(ngModel)]="remail" matInput placeholder="Email" type="email" value="">
-            <mat-icon matSuffix>email</mat-icon>
-          </mat-form-field>
-          <mat-form-field class="example-full-width">
-            <mat-label>Password</mat-label>
-            <input [(ngModel)]="rpassword" matInput placeholder="Password" type="password">
-            <mat-icon matSuffix>vpn_key</mat-icon>
-          </mat-form-field>
-          <mat-form-field class="example-full-width">
-            <mat-label>Password</mat-label>
-            <input [(ngModel)]="rcpassword" matInput placeholder="Password" type="password">
-            <mat-icon matSuffix>vpn_key</mat-icon>
-          </mat-form-field>
-        </mat-card-content>
-        <mat-card-actions class="centered-button">
-        <button (click)="register()"  color="primary" mat-button>CREATE AN ACCOUNT</button>
-        </mat-card-actions>
+        <ng-template matTabContent>
+          <mat-divider></mat-divider>
+          <mat-card-header class="header-container">
+            <mat-card-title>SIGN UP</mat-card-title>
+            <mat-card-subtitle>To create your account</mat-card-subtitle>
+          </mat-card-header>
+          <mat-card-content>
+            <mat-form-field class="example-full-width">
+              <mat-label>Email</mat-label>
+              <input [(ngModel)]="remail" matInput placeholder="Email" type="email" value="">
+              <mat-icon matSuffix>email</mat-icon>
+            </mat-form-field>
+            <mat-form-field class="example-full-width">
+              <mat-label>Password</mat-label>
+              <input [(ngModel)]="rpassword" matInput placeholder="Password" type="password">
+              <mat-icon matSuffix>vpn_key</mat-icon>
+            </mat-form-field>
+            <mat-form-field class="example-full-width">
+              <mat-label>Password</mat-label>
+              <input [(ngModel)]="rcpassword" matInput placeholder="Password" type="password">
+              <mat-icon matSuffix>vpn_key</mat-icon>
+            </mat-form-field>
+          </mat-card-content>
+          <mat-card-actions class="centered-button">
+            <button (click)="register()" color="primary" mat-button>CREATE AN ACCOUNT</button>
+          </mat-card-actions>
+        </ng-template>
       </mat-tab>
 
       <mat-tab label="WISHLIST">
-        <mat-divider></mat-divider>
-        <mat-card-content>
-          <p>
-            ❤️
-            <br>
-            Aucun produit ajouté pour le moment.
-            <br>
-            Créez un compte ou connectez-vous pour pouvoir enregistrer la liste de souhaits
-          </p>
-        </mat-card-content>
+        <ng-template matTabContent>
+          <mat-divider></mat-divider>
+          <mat-card-content>
+            <p>
+              ❤️
+              <br>
+              Aucun produit ajouté pour le moment.
+              <br>
+              Créez un compte ou connectez-vous pour pouvoir enregistrer la liste de souhaits
+            </p>
+          </mat-card-content>
+        </ng-template>
       </mat-tab>
 
       <mat-tab label="BASKET">
-        <mat-divider></mat-divider>
-        VOTRE PANIER EST VIDE.
+        <ng-template matTabContent>
+          <mat-divider></mat-divider>
+          VOTRE PANIER EST VIDE.
+        </ng-template>
       </mat-tab>
     </mat-tab-group>
   </mat-drawer>
@@ -85,22 +91,17 @@
     <mat-toolbar style="height:25px;">
       <span class="span mat-small mat-caption">Free delivery on orders over 190€</span>
     </mat-toolbar>
-
     <mat-toolbar style="background-color:white;">
-
       <mat-toolbar-row>
         <span>WeDressGreen</span>
         <mat-divider class="vertical-divider"></mat-divider>
         <span>Re-sell</span>
         <mat-divider class="vertical-divider"></mat-divider>
         <span>Brands</span>
-
         <span class="example-spacer"></span>
-
         <button (click)="drawer.toggle()" mat-icon-button>
           <mat-icon>account_circle</mat-icon>
         </button>
-
         <button (click)="drawer.toggle(); toggleTab(2)" mat-icon-button>
           <mat-icon>favorite</mat-icon>
         </button>
@@ -108,9 +109,8 @@
           <mat-icon>shopping_basket</mat-icon>
         </button>
       </mat-toolbar-row>
-
       <mat-toolbar-row class="separator">
-        <button color="primary" mat-button routerLink="/products">Clothing</button>
+        <button  mat-button routerLink="/products">Clothing</button>
         <a href="https://www.google.com/" mat-button target="_blank">Accessories</a>
         <a href="https://www.google.com/" mat-button target="_blank">Coming soon</a>
         <span class="example-spacer"></span>
@@ -121,17 +121,8 @@
     <mat-divider></mat-divider>
   </header>
 
-
-
-    <router-outlet></router-outlet>
-
-
-
+  <router-outlet></router-outlet>
   <mat-divider></mat-divider>
-
-
-
-
   <app-footer></app-footer>
 </mat-drawer-container>
 
