--- a/src/app/body/body.component.css
+++ b/src/app/body/body.component.css
@@ -1,12 +1,40 @@
-mat-grid-tile {
-  background: lightblue;
+
+.mat-grid-tile {
+  background: white;
 }
 .example-card {
-  max-width: 400px;
-  height: 550px !important;
+  max-width: 450px;
 }
 
 .example-header-image {
   background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
   background-size: cover;
+}
+.mat-card-actions{
+  display:flex;
+}
+
+.mat-card-actions .flex-spacer{
+  width:100%;
+
+}
+
+.scroll-container {
+  overflow-x: scroll;
+}
+
+.mat-grid-list {
+  width: 1800px;
+}
+
+p{
+  margin-bottom: 10px !important;
+}
+
+.mat-card {
+  border: none;
+}
+
+h3{
+  margin-top: 30px;
 }
