--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,17 +1,15 @@
-<mat-grid-list cols="3" rowHeight="2:3">
-  <mat-grid-tile *ngFor="let i of [0, 1, 2, 3]">
-    <mat-card  class="example-card">
-      <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-      <mat-card-content>
-        <p>
-          Shirt fruit
-        </p>
-      </mat-card-content>
-      <mat-card-actions>
-        <button mat-button>LIKE</button>
-        <button mat-button>SHARE</button>
-      </mat-card-actions>
-    </mat-card>
-  </mat-grid-tile>
-
-</mat-grid-list>
+<h3 style="margin: 20px" class="mat-subtitle-1"> <strong>LATEST LAUNCH</strong></h3>
+<div class="scroll-container">
+  <mat-grid-list cols="4" rowHeight="620">
+    <mat-grid-tile *ngFor="let i of [0, 1, 2, 3]">
+      <mat-card class="example-card">
+        <img mat-card-image src="./assets/img.png" alt="Photo of a Shiba Inu">
+        <mat-card-content style="padding-top: 10px" class="mat-body-2">
+          <p>Go Slow Shirt fruit</p>
+          <p>32.00 EUR</p>
+          <p>XXS XS S M L XL XXL 3XL</p>
+        </mat-card-content>
+      </mat-card>
+    </mat-grid-tile>
+  </mat-grid-list>
+</div>
