--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,45 +1,43 @@
-
-  <footer  class="footer">
-    <div class="footer-row">
-      <div class="footer-col footer-col-bigger">
-        <h4>NEWSLETTER</h4>
-        <h5>Sign up to our newsletter for inspiration, more behind the scenes & exclusive updates.</h5>
-        <mat-form-field appearance="outline">
-          <mat-label>Email</mat-label>
-          <input matInput type="email" placeholder="Enter your email">
-        </mat-form-field>
-        <h5>I have read and understood the Privacy Policy.</h5>
-        <br><br><br><br>
-        <h5 color="grey">©2023 WeDressGreen, All Rights Reserved.</h5>
-      </div>
-      <div class="footer-col">
-        <h4>WEDRESSGREEN</h4>
-        <h5>About us</h5>
-        <h5>Our brands</h5>
-        <h5>Our values</h5>
-        <br><br><br><br>
-        <h5>Privacy Policy</h5>
-      </div>
-      <div class="footer-col">
-        <h4>CUSTOMER SERVICE</h4>
-        <h5>FAQ</h5>
-        <h5>Contact us</h5>
-        <h5>Deliveries</h5>
-        <h5>Returns & Exchanges</h5>
-        <br><br><br><br>
-        <h5>Terms of Service</h5>
-      </div>
-      <div class="footer-col">
-        <h4>SOCIALS</h4>
-        <h5>Instagram</h5>
-        <h5>Tiktok</h5>
-        <h5>YouTube</h5>
-        <br><br><br><br><br>
-        <h5>Contact Us</h5>
-      </div>
+<footer class="footer">
+  <div class="footer-row">
+    <div class="footer-col footer-col-bigger">
+      <h4>NEWSLETTER</h4>
+      <h5>Sign up to our newsletter for inspiration, more behind the scenes & exclusive updates.</h5>
+      <mat-form-field class="example-full-width">
+        <mat-label>Enter Email here *</mat-label>
+        <input floatLabel="never" matInput placeholder="SIGN UP" type="email">
+      </mat-form-field>
+      <mat-checkbox>I have read and understood the <strong>Privacy Policy </strong>.</mat-checkbox>
+      <div class="line"></div>
+      <h5 class="grey">©2023 WeDressGreen, All Rights Reserved.🤍</h5>
     </div>
+    <div class="footer-col">
+      <h4>WEDRESSGREEN</h4>
+      <h5>About us</h5>
+      <h5>Our brands</h5>
+      <h5>Our values</h5>
+    </div>
+    <div class="footer-col">
+      <h4>CUSTOMER SERVICE</h4>
+      <h5>FAQ</h5>
+      <h5>Contact us</h5>
+      <h5>Deliveries</h5>
+      <h5>Returns & Exchanges</h5>
+      <div class="line"></div>
+      <h5 class="grey">Terms and conditions</h5>
 
-  </footer>
+    </div>
+    <div class="footer-col">
+      <h4>SOCIALS</h4>
+      <h5>Instagram</h5>
+      <h5>Tiktok</h5>
+      <h5>YouTube</h5>
+      <div class="line"></div>
+      <h5 class="grey">Privacy Policy</h5>
+    </div>
+  </div>
+
+</footer>
 
 
 
