add products in product-list accessible by CLOTHING tab

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -93,7 +93,7 @@
     </mat-toolbar>
     <mat-toolbar style="background-color:white;">
       <mat-toolbar-row>
-        <span>WeDressGreen</span>
+        <span routerLink="/">WeDressGreen</span>
         <mat-divider class="vertical-divider"></mat-divider>
         <span>Re-sell</span>
         <mat-divider class="vertical-divider"></mat-divider>
