--- a/src/app/body/body.component.css
+++ b/src/app/body/body.component.css
@@ -1,9 +1,11 @@
 
 .mat-grid-tile {
   background: white;
+  box-shadow: none !important;
 }
 .example-card {
   max-width: 450px;
+  box-shadow: none !important;
 }
 
 .example-header-image {
