--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -93,11 +93,11 @@
     </mat-toolbar>
     <mat-toolbar style="background-color:white;">
       <mat-toolbar-row>
-        <span routerLink="/">WeDressGreen</span>
+        <span class="clickable" routerLink="/">WeDressGreen</span>
         <mat-divider class="vertical-divider"></mat-divider>
-        <span>Re-sell</span>
+        <span class="clickable">Re-sell</span>
         <mat-divider class="vertical-divider"></mat-divider>
-        <span>Brands</span>
+        <span class="clickable">Brands</span>
         <span class="example-spacer"></span>
         <button (click)="drawer.toggle()" mat-icon-button>
           <mat-icon>account_circle</mat-icon>
