--- a/src/app/products/product-page/product-page.component.css
+++ b/src/app/products/product-page/product-page.component.css
@@ -1,14 +1,14 @@
 
-.mat-grid-tile {
+ .mat-grid-tile {
   background: white;
 }
 .example-card {
-  max-width: 450px;
+  width:100%;
+  height: 100%;
   box-shadow: none !important;
 }
 
 .example-header-image {
-  background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
   background-size: cover;
 }
 .mat-card-actions{
@@ -28,7 +28,26 @@ h3{
   margin-top: 30px;
 }
 
-.mat-headline-6 {
-  font-weight: 200 !important; /* Adjust the font weight as desired */
-}
 
+
+
+
+ .card-grid-container {
+  padding-top: 10% !important;
+   padding-left: 10% !important;
+ }
+.padding-bottom{
+  padding-bottom: 3%;
+}
+ .padding-top{
+   padding-top: 3%;
+ }
+ .padding-right{
+   margin-right: 1% ;
+
+ }
+
+.border-color{
+  border: 1px solid lightgray !important;
+  border-radius: 0;
+}
