--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -66,14 +66,15 @@
       <mat-tab label="WISHLIST">
         <ng-template matTabContent>
           <mat-divider></mat-divider>
-          <mat-card-content>
-            <p>
-              ❤️
-              <br>
-              Aucun produit ajouté pour le moment.
-              <br>
-              Créez un compte ou connectez-vous pour pouvoir enregistrer la liste de souhaits
-            </p>
+          <mat-card-content class="center-content">
+
+
+              <h3>❤️
+                <br> No products added yet .
+                <br>
+
+            Create an account or login to be able to save wishlist</h3>
+
           </mat-card-content>
         </ng-template>
       </mat-tab>
@@ -81,7 +82,9 @@
       <mat-tab label="BASKET">
         <ng-template matTabContent>
           <mat-divider></mat-divider>
-          VOTRE PANIER EST VIDE.
+          <mat-card-content class="center-content">
+          <h3>YOUR BASKET IS EMPTY</h3>
+          </mat-card-content>
         </ng-template>
       </mat-tab>
     </mat-tab-group>
