--- a/src/app/products/product-page/product-page.component.css
+++ b/src/app/products/product-page/product-page.component.css
@@ -28,10 +28,6 @@ h3{
   margin-top: 30px;
 }
 
-
-
-
-
  .card-grid-container {
   padding-top: 10% !important;
    padding-left: 10% !important;
@@ -51,3 +47,15 @@ h3{
   border: 1px solid lightgray !important;
   border-radius: 0;
 }
+
+ .button-container {
+   margin-right:32%;
+   margin-top: 3%;
+   display: flex;
+   justify-content: center;
+   background-color: lightblue;
+ }
+
+ .full-width-button {
+   width: 100%;
+ }
