add resell component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -98,7 +98,7 @@
       <mat-toolbar-row>
         <span class="clickable" routerLink="/">WeDressGreen</span>
         <mat-divider class="vertical-divider"></mat-divider>
-        <span class="clickable">Re-sell</span>
+        <span class="clickable" routerlink="/resell">Re-sell</span>
         <mat-divider class="vertical-divider"></mat-divider>
         <span class="clickable">Brands</span>
         <span class="example-spacer"></span>
@@ -116,6 +116,8 @@
         <button  mat-button routerLink="/products">Clothing</button>
         <a href="https://www.google.com/" mat-button target="_blank">Accessories</a>
         <a href="https://www.google.com/" mat-button target="_blank">Coming soon</a>
+        <a href="https://www.google.com/" mat-button target="_blank">Sell</a>
+        <a href="https://www.google.com/" mat-button target="_blank">Shop Second-hand</a>
         <span class="example-spacer"></span>
         <a href="https://www.google.com/" mat-button target="_blank">Campaign stories</a>
         <a href="https://www.google.com/" mat-button target="_blank">About us</a>
