--- a/src/app/account/account.component.css
+++ b/src/app/account/account.component.css
@@ -1,20 +1,24 @@
 .example-container {
-  width: 100%;
-  height: 600px;
+  width: 120%;
+  height: 1000px;
 
 }
 .example-sidenav-content {
   display: flex;
   height: 100%;
-  margin-left:30% !important;
-  margin-right: 10% !important;
+  margin-left:22% !important;
+  margin-right: 22% !important;
   margin-top:3% ;
 
 
 }
 .example-sidenav {
-  padding: 20px;
-  width: 20%;
+  margin: 1%;
+  padding: 10px;
+  width: 13%;
+  height: 62.5%;
+  border-radius: 10px;
+  box-shadow: none;
 }
 
 
@@ -30,8 +34,8 @@
   background-color: darkgreen; /* Pastel green color */
   color: white; /* Text color */
   font-size: 24px; /* Adjust font size as needed */
-  width: 12%; /* Adjust width as needed */
-  height: 90px; /* Adjust height as needed */
+  width: 10%; /* Adjust width as needed */
+  height: 9vh; /* Adjust height as needed */
   display: flex;
   align-items: center;
   justify-content: center;
