fix typo in re-sell link

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -98,7 +98,7 @@
       <mat-toolbar-row>
         <span class="clickable" routerLink="/">WeDressGreen</span>
         <mat-divider class="vertical-divider"></mat-divider>
-        <span class="clickable" routerlink="/resell">Re-sell</span>
+        <span class="clickable" routerLink="/resell">Re-sell</span>
         <mat-divider class="vertical-divider"></mat-divider>
         <span class="clickable">Brands</span>
         <span class="example-spacer"></span>
@@ -114,13 +114,13 @@
       </mat-toolbar-row>
       <mat-toolbar-row class="separator">
         <button  mat-button routerLink="/products">Clothing</button>
-        <a href="https://www.google.com/" mat-button target="_blank">Accessories</a>
-        <a href="https://www.google.com/" mat-button target="_blank">Coming soon</a>
-        <a href="https://www.google.com/" mat-button target="_blank">Sell</a>
-        <a href="https://www.google.com/" mat-button target="_blank">Shop Second-hand</a>
+        <a href="" mat-button target="_blank">Accessories</a>
+        <a href="" mat-button target="_blank">Coming soon</a>
+        <a href="" mat-button target="_blank">Sell</a>
+        <a href="" mat-button target="_blank">Shop Second-hand</a>
         <span class="example-spacer"></span>
-        <a href="https://www.google.com/" mat-button target="_blank">Campaign stories</a>
-        <a href="https://www.google.com/" mat-button target="_blank">About us</a>
+        <a href="" mat-button target="_blank">Campaign stories</a>
+        <a href="" mat-button target="_blank">About us</a>
       </mat-toolbar-row>
     </mat-toolbar>
     <mat-divider></mat-divider>
